--- a/belajar_Angular/src/app/home/home.component.html
+++ b/belajar_Angular/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<section>
+<section></section>
     <form action="">
         <input type="text" placeholder="Filter by city">
         <button class="primary" type="button">Search</button>
